--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             const pdfPath = 'file:///C:/Users/Owner/Desktop/' + pdfName;
 
             qz.websocket.connect().then(() => {
-                return qz.printers.find(); // Find a printer
+                return qz.printers.find('pos'); // Find a printer
             }).then((printer) => {
                 var config = qz.configs.create(printer); // Create printer config
                 var data = [{ 
