--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Print PDF from URL Parameter</title>
-    <script type="text/javascript" src="print-min.js"></script>
+    <script type="text/javascript" src="print.min.js"></script>
 </head>
 <body>
     <script>
