--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         const pdfName = getPDFNameFromURL();
 
         if(pdfName) {
-            printJS(`docs/${pdfName}.pdf`)
+            printJS(`docs/${pdfName}-min.pdf`)
         } else {
             console.error('No PDF specified in the URL parameters.');
         }
